example/http-echo/gateway2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway2
spec:
  gatewayClassName: haproxy2
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "*.haproxy.local"
