example/http-echo/route-2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-echo-2
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "example.haproxy.local"
  rules:
  - matches:
    - path:
        type: Exact
        value: /route2
    backendRefs:
    - name: http-echo-2
      port: 80
