example/http-echo/route-weight.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-echo-2
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "example.haproxy.local"
  rules:
  - matches:
    - path:
        type: Exact
        value: /route1
    backendRefs:
    - name: http-echo-1
      port: 80
      weight: 90 # 90%
    - name: http-echo-2
      port: 80
      weight: 10 # 10%


### What haproxy conf should be generated ???
