example/http-echo/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-echo-1
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "example.haproxy.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /route1
    backendRefs:
    - name: http-echo
      port: 80
